themes/blueSilence/style.css
/**
 * icônes : http://www.famfamfam.com/
 */

* {
  margin: 0;
  padding: 0;
  border: 0;
}
body {
  background: #cdcdcd;
  font:
    0.7em Arial,
    sans-serif;
}
/* Common styles
-------------------------------------------------------- */

ul,
ul li {
  list-style: none;
}
a:link,
a:visited {
  color: #000;
  text-decoration: underline;
}
a:hover {
  color: #000;
  text-decoration: none;
}
pre {
  overflow: auto;
  width: 100%;
  height: auto;
}
sup,
sub {
  font-size: calc(0.5em + 4px);
  line-height: 0;
  position: relative;
  vertical-align: baseline;
}
sup {
  top: calc(-0.83 * (1em - 4px));
}
sub {
  top: calc(0.415 * (1em - 4px));
}
.left {
  float: left;
}
.right {
  float: right;
}
/* Page
-------------------------------------------------------- */

#page {
  position: relative;
  width: 820px;
  margin: 0 auto;
  background: transparent url(index.php?tf=img/background.png) repeat-y top center;
}
/* Header
-------------------------------------------------------- */

#top {
  width: 732px;
  margin: 0 auto;
  padding: 54px 34px 46px;
  background: transparent url(index.php?tf=img/top.jpg) no-repeat left bottom;
}
#top h1 {
  font-size: 3em;
}
#top a:link,
#top a:visited,
#top a:hover {
  color: #fff;
  text-decoration: none;
}
/* Prelude
-------------------------------------------------------- */

#prelude {
  position: absolute;
  top: 0;
  right: 18px;
  width: 366px;
  padding: 6px 0 0;
  color: #cae4fc;
  text-align: center;
}
#prelude a:link,
#prelude a:visited {
  font-size: 1em;
  font-weight: bold;
  color: #cae4fc;
  text-decoration: none;
}
#prelude a:hover {
  text-decoration: underline;
}
#prelude a:focus,
#prelude a:active {
  padding: 5px 8px;
  background: yellow;
  color: red;
}
/* Wrapper
-------------------------------------------------------- */

#wrapper {
  width: 770px;
  margin: 0 auto 10px;
}
#main {
  width: 474px;
  float: left;
}
#sidebar {
  width: 272px;
  float: right;
}
/* Sidebar
-------------------------------------------------------- */

#sidebar h2 {
  margin: 0 0 10px;
  padding: 5px 8px;
  background: #f5f5f5;
  border: 1px solid #cdcdcd;
  border-width: 1px 0;
  color: #005d99;
  font-size: 1em;
  font-weight: bold;
}
#sidebar h3 {
  padding: 4px 8px 0 8px;
  color: #005d99;
  font-size: 1em;
}
#sidebar a:link,
#sidebar a:visited {
  text-decoration: none;
}
#sidebar a:hover {
  text-decoration: underline;
}
#sidebar ul {
  padding: 0 0 4px;
}
#sidebar li {
  padding: 3px 4px 3px 20px;
  background: transparent url(index.php?tf=img/sidebar_li.png) no-repeat 10px 7px;
}
#sidebar p {
  padding: 0 0 4px 10px;
}
#search fieldset p {
  padding-left: 8px;
}
#search #q {
  width: 180px;
  padding: 1px 2px;
  border: 1px solid #cdcdcd;
  color: #005d99;
  font-size: 1em;
}
#search .submit {
  color: #005d99;
  background: #fff;
  font-size: 1em;
  font-weight: bold;
  text-transform: uppercase;
  border: 1px solid #fff;
}
#search .submit:hover {
  background: #005d99;
  border: 1px solid #005d99;
  color: #fff;
}
#search,
#sidebar .selected,
#sidebar .categories,
#sidebar .syndicate,
#sidebar .langs,
#sidebar .tags,
#sidebar .links,
#sidebar .text {
  padding: 0 0 10px;
}
#topnav {
  margin: 0 0 20px;
  padding: 5px 5px 5px 8px;
  background: #f5f5f5;
  border: 1px solid #cdcdcd;
  border-width: 1px 0;
  color: #005d99;
  font-size: 0.9em;
  font-weight: bold;
  text-transform: uppercase;
}
#sidebar #topnav ul {
  margin: 0;
  padding: 0;
}
#sidebar #topnav li {
  display: inline;
  margin: 0;
  padding: 0;
  background: none;
}
#sidebar .syndicate li {
  margin: 0 4px 0 11px;
  padding: 5px 4px 5px 22px;
  background: transparent url(index.php?tf=img/rss.png) no-repeat 0% 50%;
}
#sidebar .tags ul {
  margin: 5px 5px 10px 10px;
  padding: 0;
  font-size: 110%;
}
#sidebar .tags ul li {
  display: inline;
  margin: 0;
  padding: 0;
  background: none;
  font-size: 0.9em;
}
#sidebar .tags ul li a:link,
#sidebar .tags ul li a:visited {
  color: #333;
}
#sidebar .tags p strong a:link,
#sidebar .tags p strong a:visited {
  padding: 0 0 0 18px;
  background: transparent url(index.php?tf=img/tags.png) no-repeat 0 -2px;
}
.tag0 {
  font-size: 75%;
}
.tag10 {
  font-size: 80%;
}
.tag20 {
  font-size: 90%;
}
.tag30 {
  font-size: 100%;
}
.tag40 {
  font-size: 110%;
}
.tag50 {
  font-size: 120%;
}
.tag60 {
  font-size: 130%;
}
.tag70 {
  font-size: 140%;
}
.tag80 {
  font-size: 150%;
}
.tag90 {
  font-size: 160%;
}
.tag100 {
  font-size: 170%;
}
/* Post-content
-------------------------------------------------------- */

.post-content,
.post-excerpt {
  padding: 4px 0 0 0;
  line-height: 1.5em;
  font-size: 1.2em;
}
.post-content p,
.post-excerpt p {
  padding: 4px 0;
}
.post-content strong,
.post-excerpt strong {
  font-size: 0.9em;
}
.post-content abbr,
.post-excerpt abbr {
  cursor: help;
  border-bottom: 1px dashed #666;
}
.post-content pre,
.post-excerpt pre {
  padding: 10px 5px;
  margin: 6px 0;
  background: #f5f5f5;
  font:
    1.1em 'courier new',
    courier,
    monospace;
}
.post-content h3,
.post-excerpt h3 {
  padding: 4px 0;
  font-size: 1.2em;
  color: #666;
}
.post-content h4,
.post-excerpt h4 {
  padding: 4px 0;
  font-size: 1.1em;
  color: #666;
}
.post-content h5,
.post-excerpt h5 {
  padding: 4px 0;
  font-size: 1em;
  color: #666;
}
.post-content ul,
.post-excerpt ul {
  margin: 0;
  padding: 4px 0;
}
.post-content ul li,
.post-excerpt ul li {
  padding: 1px 0 1px 10px;
  background: transparent url(index.php?tf=img/li.png) no-repeat 0 5px;
}
.post-content ol,
.post-excerpt ol {
  margin: 0 0 0 28px;
  padding: 4px 0;
}
.post-content ol li,
.post-excerpt ol li {
  padding: 1px 0;
}
.post-content blockquote,
.post-excerpt blockquote {
  margin: 4px 0 4px 5px;
  padding: 0 5px;
  border-left: 4px solid #cdcdcd;
}
/* ... */

